# cpp-minigames

./: .gitignore  CMakeLists.txt  Makefile  README.md  cppPractice  main  run.sh
src/: ClassPlayer.cpp  ClassPlayer.h  GameGuessNumber.cpp  GameGuessNumber.h  GameHangman.cpp  GameHangman.h  GameObject.cpp  GameObject.h  GameQuartzParchmentShears.cpp  GameQuartzParchmentShears.h  GameTicTacToe.cpp  GameTicTacToe.h  GameWelcome.cpp  GameWelcome.h  Menu.cpp  Menu.h  QuartzParchmentShearsGameplay.cpp  QuartzParchmentShearsGameplay.h  TemplateVector.h  inputValidation.cpp  inputValidation.h  main.cpp
src/ClassPlayer/: CMakeLists.txt  ClassPlayer.cpp  ClassPlayer.h
src/GameGuessNumber/: CMakeLists.txt  GameGuessNumber.h
src/GameHangman/: CMakeLists.txt  GameHangman.cpp  GameHangman.h
src/GameObject/: CMakeLists.txt  GameObject.cpp  GameObject.h
src/GameQuartzParchmentShears/: CMakeLists.txt  GameQuartzParchmentShears.cpp  GameQuartzParchmentShears.h
src/GameTicTacToe/: CMakeLists.txt  GameTicTacToe.cpp  GameTicTacToe.h
src/GameWelcome/: CMakeLists.txt
src/InputValidation/: CMakeLists.txt  InputValidation.cpp  InputValidation.h  inputValidation.cpp
src/Menu/: CMakeLists.txt  Menu.cpp  Menu.h
src/QuartzParchmentShears/: QuartzParchmentShears.cpp  QuartzParchmentShears.h  QuartzParchmentShearsGameplay.cpp  QuartzParchmentShearsGameplay.h
src/Template/: CMakeLists.txt
src/include/: ClassPlayer.h  GameGuessNumber.h  GameHangman.h  GameQuartzParchmentShears.h  GameTicTacToe.h  GameWelcome.h  InputValidation.h  Menu.h
(+30 files in other folders)
